fixed overflow in homepage

--- a/src/style.css
+++ b/src/style.css
@@ -46,7 +46,7 @@ button:hover{
 
 #header{
     font-family: "CustomFont";
-    font-size: 7rem;
+    font-size: calc(4vw + 4vh);
     text-align: center;
     margin: 20px 30px 0px;
 }
@@ -55,24 +55,27 @@ button:hover{
     border: solid 12px black;
     border-radius: 60px;
     background-color: var(--pink);
-    justify-self: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
     width: 60vw;
+    display: grid;
+    grid-template-rows: 1fr 1fr 1fr;
+    justify-self: center;
+    justify-items: center;
+    /*display: flex;*/
+    /*flex-direction: column;*/
+    /*justify-content: flex-start;*/
+    /*align-items: center;*/
 }
 
 #headline{
     margin: 20px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     text-align: center;
-    font-size: 1.5rem;
+    font-size: calc(1vw + 1vh);
     font-weight: 700;
 }
 
+
 #logo{
-    margin: 30px;
     max-width: 300px;
 }
 
